# allure_reports

./: .gitignore  index.html  pyproject.toml
.github/workflows/: python-app.yml
10/: index.html
10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  history.json
10/widgets/: behaviors.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
11/: index.html
11/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: history.json
11/widgets/: behaviors.json  categories-trend.json  duration-trend.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
12/: index.html
12/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: categories-trend.json  duration-trend.json  retry-trend.json
12/widgets/: behaviors.json  executors.json  severity.json  summary.json  (+1 more)
13/: index.html
14/: index.html
15/: index.html
18/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
test_set_two/: test_sample.py
tests/: test_sample.py
(+231 files in other folders)
